my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EREGVAL/EREGVAL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EREGVAL.dml:12:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EREGVAL.dml:14:7: error EREGVAL: cannot use a register with fields as a value: b.r
